@@ -67,7 +67,7 @@ ICON_DIR = ui
 CC       = gcc
 CXX      = g++
 #Insert the optional parameter to the compiler. The CFLAGS could be changed externally by the user
-CFLAGS   = -m64 
+CFLAGS   = -g -m64 
 #Set INCPATH to add the inclusion paths
 INCPATH = -I ./include  -I $(CTARTA)/include -L$(CTARTA)/lib
 #Insert the implicit parameter to the compiler:
