@@ -53,6 +53,10 @@ public:
 
 	~CTAPacket();
 
+	///It returns the total dimension of the packet contained in the stream (without prefix). The stream* contains also the prefix (if present)
+	///\param The stream with the prefix (if present)
+	dword getInputPacketDimension(byte* stream);
+
 	/// Common header for all the packets (packet header + data field header)
 	CTAPacketHeader* header;
 
