@@ -1,3 +1,7 @@
+2013-09-17  bulgarelli  <bulgarelli@abmac.local>
+
+	* code/CTAPacket.h (CTAPacket): dword getInputPacketDimension(byte* stream);
+
 2013-09-10  Andrea Bulgarelli  <bulgarelli@iasfbo.inaf.it>
 tag v1.0.0
 Dependency: PacketLib v2.0.6
